[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://main.gd" type="Script" id=4]

[node name="main" type="Node2D"]
script = ExtResource( 4 )
playtime = 40.0

[node name="Background" type="TextureRect" parent="."]
margin_right = 1025.0
margin_bottom = 606.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EnemyContainer" type="Node" parent="."]

[node name="CoinContainer" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 3 )]
